# algebraic-lcao

./: .gitignore  README.md  pyproject.toml
docs/: algebraic_matrix_elements.md  prolog_plan.md  su11_gaussian_operator.md
priv/prolog/: main.pl
project/cli/: run.py
project/qmarg/: __init__.py  algebraic_assembler.py  assembler.py  basis.py  domain.py  experiments.py  fock.py  fock_su11.py  gaussian_fit.py  optimization.py  problems.py  prolog_bridge.py  quadrature.py  reference.py  report.py  runner.py  solver.py
results/: run_backend_diagnostics.py  run_cutoff_basis_grid.py  run_cutoff_odd_even_check.py  run_cutoff_selection_summary.py  run_error_decomposition.py  run_stability_classification.py  run_truncated_backend_2d_sweep.py  run_truncated_backend_convergence.py
tests/: test_displaced_gaussian.py  test_fock_kernels.py  test_fock_su11.py  test_prolog_bridge.py  test_soft_coulomb_lcao.py
