[project]
name = "qmarg"
version = "0.1.0"
description = "One-dimensional two-center soft-Coulomb LCAO comparison experiments"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
include = ["qmarg", "qmarg.*"]
where = ["project"]

[tool.pytest.ini_options]
pythonpath = ["project"]
